--- a/src/app/components/main-view/main-view.component.html
+++ b/src/app/components/main-view/main-view.component.html
@@ -18,21 +18,26 @@
                         To Do
                     </div>
 
-                </div>
+                    <div class="task-container">
+                        <div class="task">
+                            Test test
+                        </div>
+                        <div class="task">
+                            Test test
+                        </div>
+                    </div>
 
+                </div>
                 <div class="board-column">
                     <div class="board-column-title">
-                        Working
+                        In Progress
                     </div>
                 </div>
-
                 <div class="board-column">
                     <div class="board-column-title">
-                        Waiting
+                        Review
                     </div>
                 </div>
-
-                
                 <div class="board-column">
                     <div class="board-column-title">
                         Done
@@ -43,4 +48,3 @@
         </div>
     </div>
 </div>
-
