--- a/src/app/components/main-view/main-view.component.html
+++ b/src/app/components/main-view/main-view.component.html
@@ -11,36 +11,65 @@
             <p class="board-name">Board Name</p>
         </div>
 
-        <div class="board-wrapper">
+        <div class="board-wrapper" cdkDropListGroup>
             <div class="board-columns">
-                <div class="board-column">
+
+                <div class="board-column" cdkDropList #todoList="cdkDropList" [cdkDropListData]="todo"
+                    [cdkDropListConnectedTo]="[inProgressList, reviewList, doneList]"
+                    (cdkDropListDropped)="drop($event)">
+
                     <div class="board-column-title">
                         To Do
                     </div>
 
                     <div class="task-container">
-                        <div class="task">
-                            Test test
-                        </div>
-                        <div class="task">
-                            Test test
+                        <div class="task" *ngFor="let item of todo" cdkDrag>
+                            {{item}}
                         </div>
                     </div>
 
                 </div>
-                <div class="board-column">
+
+                <div class="board-column" cdkDropList #inProgressList="cdkDropList" [cdkDropListData]="inProgress"
+                    [cdkDropListConnectedTo]="[todoList , reviewList, doneList]" (cdkDropListDropped)="drop($event)">
+
                     <div class="board-column-title">
                         In Progress
                     </div>
+
+                    <div class="task-container" *ngIf="inProgress">
+                        <div class="task" *ngFor="let item of inProgress" cdkDrag>
+                            {{item}}
+                        </div>
+                    </div>
                 </div>
-                <div class="board-column">
+
+                <div class="board-column" cdkDropList #reviewList="cdkDropList" [cdkDropListData]="review"
+                    [cdkDropListConnectedTo]="[inProgressList, todoList, doneList]" (cdkDropListDropped)="drop($event)">
+
                     <div class="board-column-title">
                         Review
                     </div>
+
+                    <div class="task-container" *ngIf="review">
+                        <div class="task" *ngFor="let item of review" cdkDrag>
+                            {{item}}
+                        </div>
+                    </div>
                 </div>
-                <div class="board-column">
+
+                <div class="board-column" cdkDropList #doneList="cdkDropList" [cdkDropListData]="done"
+                    [cdkDropListConnectedTo]="[inProgressList, todoList, reviewList]"
+                    (cdkDropListDropped)="drop($event)" > 
+
                     <div class="board-column-title">
                         Done
+                    </div>
+
+                    <div class="task-container" *ngIf="review">
+                        <div class="task task-done" *ngFor="let item of done" cdkDrag>
+                            {{item}}
+                        </div>
                     </div>
                 </div>
 
