--- a/src/app/components/main-view/main-view.component.scss
+++ b/src/app/components/main-view/main-view.component.scss
@@ -69,9 +69,27 @@
                     border-bottom: 1px white solid;
                 }
 
+          
                 .task-container {
                     flex-grow: 1;
 
+                    .cdk-drag-preview {
+                        box-sizing: border-box;
+                        border-radius: 4px;
+                        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+                            0 3px 14px 2px rgba(0, 0, 0, 0.12);
+                    }
+
+                    .cdk-drag-placeholder {
+                        opacity: 0;
+                    }
+
+                    .cdk-drag-animating {
+                        transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+                    }
+                    .cdk-drop-list-dragging{
+                        color: red;
+                    }
                     .task {
                         display: flex;
                         padding: 12px 10px;
@@ -79,11 +97,15 @@
                         border-bottom: solid 1px #dddddd;
                         border-radius: 4px;
                         box-shadow: 4px 7px;
-                        margin-bottom: 15px;
-                        
+                        margin-bottom: 15px;                  
+                    }
+
+                    .task-done{
+                        text-decoration: line-through;
                     }
                 }
             }
         }
     }
 }
+
